--- a/css/style.css
+++ b/css/style.css
@@ -347,3 +347,49 @@ body {
     margin: 10px 0 0 0;
 }
 /* !-My Skills Section Styles-! */
+
+/* Portfolio Section Styles */
+.my-site__portfolio-wrap {
+    float: left;
+    width: 100%;
+    position: relative;
+    text-align: center;
+    padding: 45px 0;
+}
+.portfolio__image-wrap {
+    display: block;
+    width: 100%;
+    height: 185px;
+    overflow-y: hidden;
+    position: relative;
+}
+.portfolio__image-wrap span {
+    display: none;
+    align-items: flex-end;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 15%;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+}
+.portfolio__image-wrap:hover span {
+    display: flex;
+}
+.gallery-image--modal .modal-dialog {
+    max-width: 100%;
+}
+.gallery-image--modal .modal-dialog .modal-content {
+    max-height: calc(100vh - 1rem);
+    overflow-y: auto;
+}
+.gallery-image--modal .modal-dialog .modal-body {
+    overflow-y: unset;
+}
+.gallery-image--modal .modal-body img {
+    width: 100%;
+    height: 100%;
+}
+/* !-Portfolio Section Styles-! */
