--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,16 @@ body {
     box-shadow: none;
 }
 
+@media(max-width: 575.98px) {
+    .my-site__top-wrap {
+        background-position: unset;
+    }
+    .my-site__top-wrap .navbar-brand {
+        font-size: 24px;
+    }
+}
+/* !-Navbar Styles-! */
+
 /* Carousel Styles */
 .my-site__carousel {
     float: left;
@@ -114,6 +124,18 @@ body {
 .my-site__carousel .carousel-control-prev:hover svg path,
 .my-site__carousel .carousel-control-next:hover svg path {
     fill: #ffffff;
+}
+
+@media(max-width: 575.98px) {
+    .my-site__carousel .carousel-item {
+        height: 90%;
+    }
+    .my-site__carousel .carousel-caption h2 {
+        font-size: 50px;
+    }
+    .my-site__carousel .carousel-caption p {
+        font-size: 20px;
+    }
 }
 /* !-Carousel Styles-! */
 
@@ -347,6 +369,22 @@ body {
     color: #ffffff;
     margin: 10px 0 0 0;
 }
+
+@media(max-width: 575.98px) {
+    .my-site__global-head-text {
+        font-size: 54px;
+    }
+    .address-list-label {
+        font-size: 20px;
+    }
+    .address-list-text {
+        word-break: ;
+        font-size: 18px;
+    }
+    .my-site__info-head {
+        font-size: 32px;
+    }
+}
 /* !-My Skills Section Styles-! */
 
 /* Portfolio Section Styles */
@@ -393,7 +431,29 @@ body {
     width: 100%;
     height: 100%;
 }
+
+@media(max-width: 767.98px) {
+    .my-site__portfolio-wrap {
+        padding-bottom: 15px;
+    }
+}
 /* !-Portfolio Section Styles-! */
+
+/* Counter Section Styles */
+.my-site__counter-wrap {
+    float: left;
+    width: 100%;
+    position: relative;
+    padding: 30px;
+    background-color: #ffd5d5;
+}
+.counter-text {
+    font-size: 32px;
+    color: #1c1c1d;
+    text-align: center;
+    margin-bottom: 0;
+}
+/* !-Counter Section Styles-! */
 
 /* Contact Section Styles */
 .my-site__contact-wrap {
@@ -414,4 +474,49 @@ body {
     border-color: #dd4343;
     color: #dd4343;
 }
+#WarningMessage {
+    display: none;
+    font-size: 20px;
+    color: #dd4343;
+    margin: 10px 0 0 0;
+}
+#WarningMessage a {
+    text-decoration: none;
+    color: #1c1c1d;
+    font-style: italic;
+}
+#WarningMessage a:hover {
+    color: #3a3a3a;
+}
+
+@media(max-width: 767.98px) {
+    .my-site__contact-wrap iframe {
+        width: 100%;
+        height: 450px;
+    }
+}
 /* !-Contact Section Styles-! */
+
+/* Footer Section */
+.my-site__footer-wrap {
+    float: left;
+    width: 100%;
+    position: relative;
+    background-color: #dd4343;
+    text-align: center;
+    padding: 10px;
+}
+.my-site__footer-wrap p {
+    font-size: 18px;
+    font-weight: 400;
+    color: #ffffff;
+    margin: 0;
+}
+.my-site__footer-wrap p a {
+    text-decoration: none;
+    color: #ffffff;
+}
+.my-site__footer-wrap p a:hover {
+    text-decoration: underline;
+}
+/* !-Footer Section-! */
